--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>INSTITUCIÓN EDUCATIVA PRIVADA INGENIERIA</title>
-  <base href="">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="ico" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,6 +19,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="scripts-CWJO5AXB.js" defer></script><script src="main-RILTPSLY.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="scripts-CWJO5AXB.js" defer></script><script src="main-7LOO6PZC.js" type="module"></script></body>
 
 </html>
