--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="scripts-CWJO5AXB.js" defer></script><script src="main-KTR4DKIF.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="scripts-CWJO5AXB.js" defer></script><script src="main-BGGKKQ56.js" type="module"></script></body>
 
 </html>
